<resources>
    <string name="phoneAppLabel">Phone</string>
    <string name="emergencyDialerIconLabel">Emergency Dialer</string>
    <string name="phoneIconLabel">Phone</string>
    <string name="fdnListLabel">FDN list</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="onHold">On hold</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_timedOut">No response, timed out</string>
    <string name="callFailed_server_unreachable">Server unreachable</string>
    <string name="callFailed_number_unreachable">Number unreachable</string>
    <string name="callFailed_invalid_credentials">Incorrect username or password</string>
    <string name="callFailed_out_of_network">Called from out-of-network</string>
    <string name="callFailed_server_error">Server error. Try again later.</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Radio off</string>
    <string name="callFailed_simError">No SIM or SIM error</string>
    <string name="callFailed_outOfService">Out of service area</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN.</string>
    <string name="callFailed_cb_enabled">"You can't make outgoing calls while call barring is on."</string>
    <string name="callFailed_dsac_restricted">All calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_emergency">Emergency calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_normal">Normal calls are restricted by access control.</string>
    <string name="callFailed_unobtainable_number">Invalid number</string>
    <string name="confCall">Conference call</string>
    <string name="call_lost">Call has been lost.</string>
    <string name="ok">OK</string>
    <string name="mmiStarted">MMI code started</string>
    <string name="ussdRunning">USSD code running…</string>
    <string name="mmiCancelled">MMI code canceled</string>
    <string name="cancel">Cancel</string>
    <string name="manageConferenceLabel">Manage conference call</string>
    <string name="audio_mode_speaker">Speaker</string>
    <string name="audio_mode_earpiece">Handset earpiece</string>
    <string name="audio_mode_wired_headset">Wired headset</string>
    <string name="audio_mode_bluetooth">Bluetooth</string>
    <string name="wait_prompt_str">"Send the following tones?
"</string>
    <string name="pause_prompt_str">"Sending tones
"</string>
    <string name="send_button">Send</string>
    <string name="pause_prompt_yes">Yes</string>
    <string name="pause_prompt_no">No</string>
    <string name="wild_prompt_str">Replace wild character with</string>
    <string name="no_vm_number">Missing voicemail number</string>
    <string name="no_vm_number_msg">No voicemail number is stored on the SIM card.</string>
    <string name="add_vm_number_str">Add number</string>
    <string name="puk_unlocked">Your SIM card has been unblocked. Your phone is unlocking…</string>
    <string name="label_ndp">SIM network unlock PIN</string>
    <string name="sim_ndp_unlock_text">Unlock</string>
    <string name="sim_ndp_dismiss_text">Dismiss</string>
    <string name="requesting_unlock">Requesting network unlock…</string>
    <string name="unlock_failed">Network unlock request unsuccessful.</string>
    <string name="unlock_success">Network unlock successful.</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="apn_settings">Access Point Names</string>
    <string name="settings_label">Network settings</string>
    <string name="voicemail">Voicemail</string>
    <string name="voicemail_abbreviated">VM:</string>
    <string name="networks">Network operators</string>
    <string name="call_settings">Call settings</string>
    <string name="additional_gsm_call_settings">Additional settings</string>
    <string name="sum_gsm_call_settings">Additional GSM only call settings</string>
    <string name="additional_cdma_call_settings">Additional CDMA call settings</string>
    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
    <string name="labelNwService">Network service settings</string>
    <string name="labelCallerId">Caller ID</string>
    <string name="sum_loading_settings">Loading settings…</string>
    <string name="sum_hide_caller_id">Number hidden in outgoing calls</string>
    <string name="sum_show_caller_id">Number displayed in outgoing calls</string>
    <string name="sum_default_caller_id">Use default operator settings to display my number in outgoing calls</string>
    <string name="labelCW">Call waiting</string>
    <string name="sum_cw_enabled">During a call, notify me of incoming calls</string>
    <string name="sum_cw_disabled">During a call, notify me of incoming calls</string>
    <string name="call_forwarding_settings">Call forwarding settings</string>
    <string name="labelCF">Call forwarding</string>
    <string name="labelCFU">Always forward</string>
    <string name="messageCFU">Always use this number</string>
    <string name="sum_cfu_enabled_indicator">Forwarding all calls</string>
    <string name="sum_cfu_enabled">Forwarding all calls to {0}</string>
    <string name="sum_cfu_enabled_no_number">Number is unavailable</string>
    <string name="sum_cfu_disabled">Disabled</string>
    <string name="labelCFB">Forward when busy</string>
    <string name="messageCFB">Number when busy</string>
    <string name="sum_cfb_enabled">Forwarding to {0}</string>
    <string name="sum_cfb_disabled">Disabled</string>
    <string name="disable_cfb_forbidden">"Your operator doesn't support disabling call forwarding when your phone is busy."</string>
    <string name="labelCFNRy">Forward when unanswered</string>
    <string name="messageCFNRy">Number when unanswered</string>
    <string name="sum_cfnry_enabled">Forwarding to {0}</string>
    <string name="sum_cfnry_disabled">Disabled</string>
    <string name="disable_cfnry_forbidden">"Your operator doesn't support disabling call forwarding when your phone doesn't answer."</string>
    <string name="labelCFNRc">Forward when unreachable</string>
    <string name="messageCFNRc">Number when unreachable</string>
    <string name="sum_cfnrc_enabled">Forwarding to {0}</string>
    <string name="sum_cfnrc_disabled">Disabled</string>
    <string name="disable_cfnrc_forbidden">"Your carrier doesn't support disabling call forwarding when your phone is unreachable."</string>
    <string name="updating_title">Call settings</string>
    <string name="error_updating_title">Call settings error</string>
    <string name="reading_settings">Reading settings…</string>
    <string name="updating_settings">Updating settings…</string>
    <string name="reverting_settings">Reverting settings…</string>
    <string name="response_error">Unexpected response from network.</string>
    <string name="exception_error">Network or SIM card error.</string>
    <string name="fdn_check_failure">"Your Phone app's Fixed Dialing Numbers setting is turned on. As a result, some call-related features aren't working."</string>
    <string name="radio_off_error">Turn on the radio before viewing these settings.</string>
    <string name="close_dialog">OK</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="change_num">Update</string>
    <string name="vm_changed">Voicemail number changed.</string>
    <string name="vm_change_failed">"Couldn't change the voicemail number.
Contact your carrier if this problem persists."</string>
    <string name="fw_change_failed">"Couldn't change the forwarding number.
Contact your carrier if this problem persists."</string>
    <string name="fw_get_in_vm_failed">"Couldn't retrieve and save current forwarding number settings.
Switch to the new provider anyway?"</string>
    <string name="no_change">No changes were made.</string>
    <string name="sum_voicemail_choose_provider">Choose voicemail service</string>
    <string name="voicemail_default">My carrier</string>
    <string name="mobile_networks">Mobile network settings</string>
    <string name="label_available">Available networks</string>
    <string name="load_networks_progress">Searching…</string>
    <string name="empty_networks_list">No networks found.</string>
    <string name="search_networks">Search networks</string>
    <string name="network_query_error">Error while searching for networks.</string>
    <string name="register_on_network">Registering on %s…</string>
    <string name="not_allowed">"Your SIM card doesn't allow a connection to this network."</string>
    <string name="connect_later">"Can't connect to this network right now. Try again later."</string>
    <string name="registration_done">Registered on network.</string>
    <string name="sum_carrier_select">Choose a network operator</string>
    <string name="sum_search_networks">Search for all available networks</string>
    <string name="select_automatically">Choose automatically</string>
    <string name="sum_select_automatically">Automatically choose preferred network</string>
    <string name="register_automatically">Automatic registration…</string>
    <string name="preferred_network_mode_title">Network Mode</string>
    <string name="preferred_network_mode_summary">Change the network operating mode</string>
    <string name="preferred_network_mode_dialogtitle">Preferred network mode</string>
    <string name="description_dial_button">dial</string>
    <string name="description_delete_button">backspace</string>
    <string name="answer_miui">Answer</string>
    <string name="call_recording_prompt_miui">Open call recording</string>
    <string name="contacts_icon_label_miui">Contacts</string>
    <string name="custom_location_location_hint_miui">Name</string>
    <string name="custom_location_number_hint_miui">Area code such as 010, group number such as 68#####</string>
    <string name="delete_sim_contact_confirm_title_miui">Delete SIM contacts</string>
    <string name="edit_custom_location_title_miui">Customize regional attribution, number attribution, wildcards # supported</string>
    <string name="enter_pin2_text_miui">PIN2</string>
    <string name="hangup_sms_miui">Reject via SMS</string>
    <string name="ignore_miui">Ignore</string>
    <string name="number_type_jituan_miui">Group number</string>
    <string name="number_type_miui">Number type</string>
    <string name="number_type_mob_miui">Mobile phone</string>
    <string name="number_type_tel_miui">Landline</string>
    <string name="onscreen_add_call_text_miui">Add call</string>
    <string name="onscreen_audio_mode_bluetooth_miui">Bluetooth</string>
    <string name="onscreen_audio_mode_handset_miui">Handsfree</string>
    <string name="onscreen_audio_mode_speaker_miui">Loudspeaker</string>
    <string name="onscreen_call_record_miui">Record</string>
    <string name="onscreen_hold_text_miui">Hold</string>
    <string name="onscreen_merge_calls_text_miui">Merge calls</string>
    <string name="onscreen_mute_text_miui">Mute</string>
    <string name="onscreen_note_text_miui">Note</string>
    <string name="onscreen_swap_calls_text_miui">Swap</string>
    <string name="remove_miui">Delete</string>
    <string name="sim_contact_name_miui">Name</string>
    <string name="sim_contact_number_miui">Number</string>
    <string name="sliding_down_hint_miui">Slide down to answer</string>
    <string name="sliding_target_hint_miui">Slide target</string>
    <string name="sliding_up_hint_miui">Slide up to reject</string>
    <string name="back_miui">Back</string>
</resources>