<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/edit_custom_location_title_miui" />
                <EditText android:id="@id/custom_number" android:background="?miui:v5_group_item_bg" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:hint="@string/custom_location_number_hint_miui" android:singleLine="true" android:phoneNumber="true" />
                <EditText android:id="@id/custom_location" android:background="?miui:v5_group_item_bg" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/custom_location_location_hint_miui" android:singleLine="true" />
                <TextView android:gravity="center_vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/number_type_miui" />
            </LinearLayout>
            <RadioGroup android:orientation="vertical" android:id="@id/type_group" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <RadioButton android:id="@id/type_tel" android:background="@miui:drawable/v5_preference_item_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/number_type_tel_miui" />
                <RadioButton android:id="@id/type_mob" android:background="@miui:drawable/v5_preference_item_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/number_type_mob_miui" />
                <RadioButton android:id="@id/type_jituan" android:background="@miui:drawable/v5_preference_item_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/number_type_jituan_miui" />
            </RadioGroup>
            <Button android:id="@id/btn_delete" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/remove_miui" style="@miui:style/V5.Widget.Button.NegativeWarn" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:orientation="horizontal" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip">
        <Button android:id="@id/btn_discard" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@*android:string/cancel" android:layout_weight="1.0" />
        <Button android:id="@id/btn_done" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@*android:string/ok" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>